test/Fail/Issue2858-conflict.agda
interleaved mutual

  data Foo : Set → Set
  data Foo_Bar : Set

  constructor
    foobar : Foo Bar
